
[TestLexingKeywords - 1]
[]parser.Token{
    {
        Data: &parser.TFn{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:1},
            End:   parser.Location{Line:1, Column:3},
        },
    },
    {
        Data: &parser.TVar{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:4},
            End:   parser.Location{Line:1, Column:7},
        },
    },
    {
        Data: &parser.TVal{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:8},
            End:   parser.Location{Line:1, Column:11},
        },
    },
}
---

[TestLexingOperators - 1]
[]parser.Token{
    {
        Data: &parser.TPlus{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:1},
            End:   parser.Location{Line:1, Column:2},
        },
    },
    {
        Data: &parser.TMinus{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:3},
            End:   parser.Location{Line:1, Column:4},
        },
    },
    {
        Data: &parser.TAsterisk{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:5},
            End:   parser.Location{Line:1, Column:6},
        },
    },
    {
        Data: &parser.TSlash{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:7},
            End:   parser.Location{Line:1, Column:8},
        },
    },
    {
        Data: &parser.TEquals{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:9},
            End:   parser.Location{Line:1, Column:10},
        },
    },
}
---

[TestLexingIdentifiers - 1]
[]parser.Token{
    {
        Data: &parser.TIdentifier{Value:"foo"},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:1},
            End:   parser.Location{Line:1, Column:4},
        },
    },
    {
        Data: &parser.TIdentifier{Value:"bar"},
        Span: parser.Span{
            Start: parser.Location{Line:2, Column:1},
            End:   parser.Location{Line:2, Column:4},
        },
    },
}
---

[TestLexingLiterals - 1]
[]parser.Token{
    {
        Data: &parser.TString{Value:"\"hello"},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:1},
            End:   parser.Location{Line:1, Column:7},
        },
    },
    {
        Data: &parser.TString{Value:"\""},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:7},
            End:   parser.Location{Line:1, Column:8},
        },
    },
}
---

[TestLexingParens - 1]
[]parser.Token{
    {
        Data: &parser.TIdentifier{Value:"a"},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:1},
            End:   parser.Location{Line:1, Column:2},
        },
    },
    {
        Data: &parser.TAsterisk{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:3},
            End:   parser.Location{Line:1, Column:4},
        },
    },
    {
        Data: &parser.TOpenParen{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:5},
            End:   parser.Location{Line:1, Column:6},
        },
    },
    {
        Data: &parser.TIdentifier{Value:"b"},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:6},
            End:   parser.Location{Line:1, Column:7},
        },
    },
    {
        Data: &parser.TPlus{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:8},
            End:   parser.Location{Line:1, Column:9},
        },
    },
    {
        Data: &parser.TIdentifier{Value:"c"},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:10},
            End:   parser.Location{Line:1, Column:11},
        },
    },
    {
        Data: &parser.TCloseParen{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:11},
            End:   parser.Location{Line:1, Column:12},
        },
    },
}
---
